--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 cache: pip
 before_cache: rm -f $HOME/.cache/pip/log/debug.log
 install:
-    - pip install --upgrade pip
+    - pip install --upgrade pip setuptools
     - pip install .[test] codecov
 script: pytest
 after_success: codecov
