--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,74 @@
 [metadata]
-license_file = LICENSE
+name = pyclts
+version = 3.1.2.dev0
+author = Johann-Mattis List, Cormac Anderson, Tiago Tresoldi, and Robert Forkel
+author_email = mattis.list@lingpy.org
+description = Programmatic access to CLTS
+long_description = file: README.md
+long_description_content_type = text/markdown
+keywords = linguistics
+license = Apache 2.0
+license_files = LICENSE
+url = https://github.com/cldf-clts/pyclts
+project_urls =
+    Bug Tracker = https://github.com/cldf-clts/pyclts/issues
+platforms = any
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Natural Language :: English
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
+    License :: OSI Approved :: Apache Software License
+
+[options]
+zip_safe = False
+packages = find:
+package_dir =
+    = src
+python_requires = >=3.7
+install_requires =
+    attrs>=18.2
+    pybtex
+    clldutils>=3.8
+    pycldf
+    cldfcatalog>=1.3
+    csvw>=1.6
+    uritemplate
+include_package_data = True
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+pycldf =
+    components/*
+    modules/*
+
+[options.entry_points]
+console_scripts =
+    clts = pyclts.__main__:main
+
+[options.extras_require]
+dev =
+    lingpy
+    tox
+    flake8
+    wheel>=0.36
+    twine
+test =
+    pytest>=5
+    pytest-mock
+    pytest-cov
+    coverage>=4.2
 
 [bdist_wheel]
 universal = 1
@@ -25,3 +94,12 @@ source =
 [coverage:report]
 show_missing = true
 skip_covered = true
+
+[tox:tox]
+envlist = py37, py38, py39, py310, py311
+isolated_build = true
+skip_missing_interpreter = true
+
+[testenv]
+deps = .[test]
+commands = pytest {posargs}
