drop py3.7 compat, add py3.12 compat

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,11 +20,11 @@ classifiers =
     Natural Language :: English
     Operating System :: OS Independent
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
     Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
     License :: OSI Approved :: Apache Software License
@@ -34,7 +34,7 @@ zip_safe = False
 packages = find:
 package_dir =
     = src
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
     attrs>=18.2
     pybtex
@@ -64,6 +64,7 @@ dev =
     flake8
     wheel>=0.36
     twine
+    build
 test =
     pytest>=5
     pytest-mock
@@ -96,7 +97,7 @@ show_missing = true
 skip_covered = true
 
 [tox:tox]
-envlist = py37, py38, py39, py310, py311
+envlist = py38, py39, py310, py311, py312
 isolated_build = true
 skip_missing_interpreter = true
 
