--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pyclts
-version = 3.2.0
+version = 3.2.1.dev0
 author = Johann-Mattis List, Cormac Anderson, Tiago Tresoldi, and Robert Forkel
 author_email = mattis.list@lingpy.org
 description = Programmatic access to CLTS
